objects/IND_Contract__c.object
<CustomObject>
    <description>This object will be used for Industrial contract upload instead of the standard SF object</description>
    <fields>
        <fullName>AM_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager of the AM, as defined on the user record</description>
        <label>AM Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IND_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IND Contracts</relationshipLabel>
        <relationshipName>IND_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_Status__c</fullName>
        <description>This field describes the action status of the contract. It will be used in the &apos;My to-do&apos; screen.</description>
        <label>Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Review</fullName>
                </value>
                <value>
                    <fullName>Auto-Renewal Check</fullName>
                </value>
                <value>
                    <fullName>End of Life</fullName>
                </value>
                <value>
                    <fullName>All Green</fullName>
                </value>
                <value>
                    <fullName>Cancellation Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Contract_XX_days_before_renewal__c</fullName>
        <label>Cancel Contract XX days before renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - Pending AM Review</fullName>
                </value>
                <value>
                    <fullName>Active - Pending Termination Approval</fullName>
                </value>
                <value>
                    <fullName>Admin Edit</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Types__c</fullName>
        <description>This picklist is used as a reference for the record types in the contract_create flow</description>
        <label>Contract Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tooling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_will_be_sent_for_approval_on__c</fullName>
        <formula>IF(
NOT(ISBLANK( Contract_End_Date__c )),

End_Date_Renewal_Period__c  - Cancel_Contract_XX_days_before_renewal__c-90,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Actions on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Approver_ID__c</fullName>
        <label>Current Approver ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver_Name__c</fullName>
        <label>Current Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_for_next_review__c</fullName>
        <inlineHelpText>Please enter a date when you want to review the contract next time.</inlineHelpText>
        <label>Date for next review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Cancellation_Period__c</fullName>
        <formula>IF(TODAY() + Cancel_Contract_XX_days_before_renewal__c &lt;


IF(
MONTH( TODAY() ) = 12,
DATE( YEAR( TODAY() ), 12, 31 ),
DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - 1
),

IF(
MONTH( TODAY() ) = 12,
DATE( YEAR( TODAY() ), 12, 31 ),
DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - 1
),

IF(
MONTH( TODAY()+ Cancel_Contract_XX_days_before_renewal__c ) = 12,
DATE( YEAR( TODAY() ), 12, 31 ),
DATE( YEAR( TODAY()+ Cancel_Contract_XX_days_before_renewal__c ),
MONTH ( TODAY()+ Cancel_Contract_XX_days_before_renewal__c ) + 1, 1 ) - 1
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Cancellation Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Intermediate__c</fullName>
        <description>will hold the end date for the new contract period for the time from contract end actions to expiration date of old contract period.</description>
        <label>End Date Intermediate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Renewal_Period__c</fullName>
        <description>this field stores the respective end date when a contract reaches a renewal period</description>
        <label>End Date Renewal Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_notice_will_be_sent_on__c</fullName>
        <formula>IF(
OR(
AND(
 Yearly_review_always_required__c = true,
 Temp_End_date__c &lt;&gt;  End_Date_Renewal_Period__c 
),
AND(
 Yearly_review_always_required__c = true,
 ISBLANK(End_Date_Renewal_Period__c)
)
),

 Temp_End_date__c  -  Cancel_Contract_XX_days_before_renewal__c-90,null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Yearly Action on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factor_for_Temp_end_date_calculation__c</fullName>
        <description>this factor will be used in field update in the field update to update the temp end date. It sets the temp end date in the future in case we have a contract that started in the past and has a yearly review set up.</description>
        <formula>YEAR(TODAY()+365) - YEAR (  Contract_Start_Date__c +365 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factor for Temp end date calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Review_Process_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will be checked once the contract has passed a first review</description>
        <label>First Review Process Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAM_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for approval process. If GAM approved, no approval from RSM necessary</description>
        <label>GAM Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>displays the GAM user for the global account. Filled by contract flow</description>
        <label>GAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IND_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PB_Counter_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <description>temp field only</description>
        <label>PB Counter Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when a contract has been sent for cancellation approval and the cancellation is granted</description>
        <label>Renewal Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal Term (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_for_AM_Approval__c</fullName>
        <label>Sent for AM Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_for_termination_approval__c</fullName>
        <label>Sent for termination approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Intermediate__c</fullName>
        <description>will hold the start date for the new contract period for the time from contract end actions to expiration date of old contract period.</description>
        <label>Start Date Intermediate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TESOG_Contract_Number__c</fullName>
        <label>Contract ID Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_End_date__c</fullName>
        <description>temp end date, used for calculations.</description>
        <label>New Period End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Start_Date__c</fullName>
        <description>This field will contain a temporary start date, used only for calculations</description>
        <label>New Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_in_AM_approval__c</fullName>
        <formula>TODAY()- Sent_for_AM_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in AM approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Termination_Approval__c</fullName>
        <formula>TODAY() -  Sent_for_termination_approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Termination Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly_review_always_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this field if the contract must always be reviewed on a yearly basis.</inlineHelpText>
        <label>Yearly review always required</label>
        <type>Checkbox</type>
    </fields>
    <label>IND Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TESOG_Contract_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Action_Status__c</columns>
        <columns>Contract_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IND Contracts</pluralLabel>
    <recordTypes>
        <fullName>Logistics</fullName>
        <active>true</active>
        <label>Logistics</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Contract</fullName>
        <active>true</active>
        <label>Master Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing_Agreement</fullName>
        <active>true</active>
        <label>Pricing Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality</fullName>
        <active>true</active>
        <label>Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Read_Only</fullName>
        <active>true</active>
        <description>This Record Type will be set automatically when the contract is activated</description>
        <label>Quality Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Edit_Record_Type</fullName>
        <active>true</active>
        <label>Standard Edit Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tooling</fullName>
        <active>true</active>
        <label>Tooling</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tooling_Read_Only</fullName>
        <active>true</active>
        <description>This Record Type will be set automatically when the contract is activated</description>
        <label>Tooling - Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IND_Contract_Account_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

NOT(ISPICKVAL( Contract_Status__c , &quot;Admin Edit&quot;)),
NOT(ISCHANGED (Contract_Status__c)),

ISCHANGED(   Account__c  )

)</errorConditionFormula>
        <errorMessage>You are not allowed to change the account after initial setup. Please contact your Administrator for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IND_Contract_Admin_Edit</fullName>
        <active>true</active>
        <description>This validation rule will prevent an Admin from changing the dates without having chosen status = Admin Edit</description>
        <errorConditionFormula>AND(
OR(
$Profile.Name = &quot;BU Admin&quot;,
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Systemadministrator&quot;
),
NOT(ISPICKVAL( Contract_Status__c , &quot;Admin Edit&quot;)),
NOT(ISCHANGED (Contract_Status__c)),
OR(
ISCHANGED(Contract_Start_Date__c) ,
ISCHANGED( Contract_End_Date__c) ,
ISCHANGED( Cancel_Contract_XX_days_before_renewal__c) ,
ISCHANGED( Renewal_Term_Months__c),
ISCHANGED(  Date_for_next_review__c  ),
ISCHANGED(  TESOG_Contract_Number__c  )

) 
)</errorConditionFormula>
        <errorMessage>Please use the &apos;Edit Contract&apos; button to make changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IND_Contract_Record_Type</fullName>
        <active>false</active>
        <description>This validation rule will prevent an Admin from changing the record type</description>
        <errorConditionFormula>AND(
OR(
$Profile.Name = &quot;BU Admin&quot;,
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Systemadministrator&quot;
),
NOT(ISPICKVAL( Contract_Status__c , &quot;Admin Edit&quot;)),
NOT(ISCHANGED (Contract_Status__c)),

ISCHANGED(  RecordTypeId )

)</errorConditionFormula>
        <errorMessage>You are not allowed to change the record type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Review_Date_in_Contract_End_Period</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
NOT(ISBLANK(Contract_will_be_sent_for_approval_on__c)),
Date_for_next_review__c  &gt;=  Contract_will_be_sent_for_approval_on__c 
), true, false)</errorConditionFormula>
        <errorMessage>Your review date falls into the period before the end of the runtime, please choose an earlier date.</errorMessage>
    </validationRules>
</CustomObject>